# newsAggregator

./: CMakeLists.txt  Data  README.md
data/: data1  data2  data3
include/: AVLTree.h  Document.h  DocumentParser.h  IndexHandler.h  QueryProcessor.h  Stemmer.h  StopWords.h  UserInterface.h
src/: Document.cpp  DocumentParser.cpp  IndexHandler.cpp  QueryProcessor.cpp  Stemmer.cpp  StopWords.cpp  UserInterface.cpp  main.cpp
